--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,6 @@ li .logout:focus {
 }
 
 .filter_menu legend,
-.sorting_form legend,
 .product .product_name {
     font-family: "gilroy", "Arial", sans-serif;
     font-weight: bold;
@@ -211,7 +210,7 @@ li .logout:focus {
     letter-spacing: 0.18px;
 }
 
-.sorting_form li {
+.sorting_menu li {
     list-style: none;
 }
 
@@ -222,6 +221,20 @@ li .logout:focus {
     letter-spacing: 0.16px;
 }
 
+.filter_menu div:first-child {
+    background-color: #d9d9d9;
+}
+
+.filter_menu h3,
+.sorting_menu h3 {
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 24px;
+}
+
+.filter_form fieldset {
+    border: none;
+}
 /* -------- футер --------- */
 
 .social li {
