--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body {
     width: 1px;
     height: 1px;
     margin: -1px;
-    border: 0;_
+    border: 0;
     padding: 0;
     clip: rect(0 0 0 0);
     overflow: hidden;
