--- a/css/style.css
+++ b/css/style.css
@@ -118,8 +118,14 @@ a:focus {
 .menu_links li,
 .about_us li,
 .delivery li,
-.nav_list li {
+.nav_list li,
+.footer_content li {
     list-style: none;
+}
+
+.links_navigation li,
+.menu_catalog li:first-child {
+    text-transform: uppercase;
 }
 
 .dropdown_menu ul li{
@@ -426,3 +432,53 @@ ul .dellivery_company {
     margin-top: 82px;
     margin-bottom: 98px;
 }
+
+/* ---------- футер ---------- */
+
+.block_footer {
+    padding-top: 65px;
+}
+
+.footer_content,
+.footer_options ul {
+    display: flex;
+}
+
+.footer_logo,
+.footer_options {
+    flex-basis: 50%;
+}
+
+.footer_options li {
+    padding-left: 65px;
+}
+
+.footer_options ul {
+    justify-content: flex-end;
+}
+
+.block_adress {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer_links {
+    margin: 0;
+    padding-right: 0;
+}
+
+.footer_links li {
+    margin-right: 38px;
+    text-transform: uppercase;
+}
+
+.social ul {
+    display: flex;
+    justify-content: center;
+}
+
+.social li {
+    padding-right: 32px;
+    padding-top: 55px;
+}
+
