--- a/css/style.css
+++ b/css/style.css
@@ -482,3 +482,8 @@ ul .dellivery_company {
     padding-top: 55px;
 }
 
+/* --------- каталог ---------- */
+
+.logout {
+    padding-left: 20px;
+}
